<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E4A4A"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blackout"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#9E9E9E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/button"
        android:layout_width="303dp"
        android:layout_height="101dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="32dp"
        android:background="#5A1C71"
        android:backgroundTint="#E88F8F"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/start_game"
        app:iconTint="#6A135E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/playertext"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="3dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/number_of_players"
        android:inputType="number"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColorHint="#B0BEC5"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:layout_width="238dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.318" >

        <RadioButton
            android:id="@+id/EasyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/easy"
            android:textColor="#B0BEC5" />

        <RadioButton
            android:id="@+id/MedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/medium"
            android:textColor="#B0BEC5" />

        <RadioButton
            android:id="@+id/HardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/hard"
            android:textColor="#B0BEC5" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>