...
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="1dp"
        app:barrierMargin="10dp"
        app:columnCount="5"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="7">

        <TextView
...
            android:textAlignment="center"
            android:textColor="#B0BEC5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="94dp"
            android:layout_height="140dp"
            android:background="#513777"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/roll"
...
