<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#887979">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="195dp"
        android:layout_height="71dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="108dp"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="#3E2723"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winnerText"
        android:layout_width="195dp"
        android:layout_height="71dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="108dp"
        android:textAlignment="center"
        android:textColor="#3E2723"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="112dp"
        android:background="#D65B5B"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/start_over"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>